--- a/src/pages/Home/Dashboard/Dashboard.scss
+++ b/src/pages/Home/Dashboard/Dashboard.scss
@@ -191,6 +191,7 @@
 
             .dashboard-socials {
                 padding-top: 40px;
+                gap: 10vw;
             }
     
             .dashboard-shark {
